src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_or_pattern-15.snap
---
source: src/parser.rs
assertion_line: 4065
expression: "parse(\"\\\nmodule Test\n\ntest ((a as b) | hello) = 5\n\")"
---
Input:

module Test

test ((a as b) | hello) = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [
            Import {
                span: Index(
                    1,
                ),
                module_name: ModuleName {
                    parts: [
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 7,
                            },
                            span: Index(
                                1,
                            ),
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 7,
                    },
                },
                alias: None,
                exposing: [
                    Export {
                        span: Index(
                            1,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 8,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            1,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 9,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            1,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 10,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                            constructors: [
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 11,
                                    },
                                    span: Index(
                                        1,
                                    ),
                                },
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 12,
                                    },
                                    span: Index(
                                        1,
                                    ),
                                },
                            ],
                        },
                    },
                ],
            },
        ],
        definitions: [
            Untyped(
                Lambda(
                    Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            2,
                        ),
                    },
                    Lambda {
                        parameters: [
                            Pattern {
                                span: Index(
                                    10,
                                ),
                                typ: Or(
                                    [
                                        Pattern {
                                            span: Index(
                                                7,
                                            ),
                                            typ: Named {
                                                pattern: Pattern {
                                                    span: Index(
                                                        5,
                                                    ),
                                                    typ: Identifier(
                                                        Identifier {
                                                            name: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Index(
                                                                4,
                                                            ),
                                                        },
                                                    ),
                                                },
                                                name: Identifier {
                                                    name: SymbolU32 {
                                                        value: 4,
                                                    },
                                                    span: Index(
                                                        6,
                                                    ),
                                                },
                                            },
                                        },
                                        Pattern {
                                            span: Index(
                                                9,
                                            ),
                                            typ: Identifier(
                                                Identifier {
                                                    name: SymbolU32 {
                                                        value: 5,
                                                    },
                                                    span: Index(
                                                        8,
                                                    ),
                                                },
                                            ),
                                        },
                                    ],
                                ),
                            },
                        ],
                        body: Index(
                            0,
                        ),
                    },
                ),
            ),
        ],
        type_definitions: [],
        expressions: {
            Index(
                0,
            ): Expression {
                span: Index(
                    11,
                ),
                expr: Float(
                    5.0,
                ),
            },
        },
        expression_types: {
            Index(
                0,
            ): None,
        },
    },
    [],
)

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            5,
        ),
        end: Index(
            5,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            5,
        ),
        end: Index(
            5,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            7,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            5,
        ),
        end: Index(
            7,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            10,
        ),
        end: Index(
            10,
        ),
    },
    Index(
        9,
    ): Span {
        start: Index(
            10,
        ),
        end: Index(
            10,
        ),
    },
    Index(
        10,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            10,
        ),
    },
    Index(
        11,
    ): Span {
        start: Index(
            13,
        ),
        end: Index(
            13,
        ),
    },
}
